# PRISM-LLM-Multi-Agent-LLM-for-Periodontal-Evidence-Synthesis

./: .gitignore  CHANGELOG.md  EVALUATION.md  LICENSE  Makefile  __init__.py  ablation.py  ci.yml  cli.py  config.example.yaml  demo.py  finetune_nli_guard.py  finetune_perioontobert.py  finetune_screener.py  generate_figures.py  layer2_screening.py  layer3_extraction.py  layer4_quality.py  layer5_synthesis.py  liu_2019_cells.json  mesh_ontology.py  perio_regen.yaml  pipeline.py  pyproject.toml  requirements.txt  setup.py  test_extraction.py  test_retrieval.py  test_schemas.py
data/gold_standard/: README.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md
src/: __init__.py
src/evaluation/: __init__.py  benchmark.py  metrics.py
src/layers/: __init__.py  layer1_retrieval.py
src/schemas/: __init__.py  evidence_gap.py  pico_perio.py  rob_assessment.py
src/utils/: db_connectors.py  deduplication.py  export.py  llm_client.py  numerical_grounding.py  pdf_parser.py
tests/: __init__.py  test_deduplication.py  test_pipeline.py
