[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "prism-llm"
version = "1.0.0"
description = "PRISM-LLM: Multi-Agent LLM for Periodontal Regeneration Evidence Synthesis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "PRISM-LLM Team"}]
keywords = ["periodontal", "regeneration", "llm", "systematic-review", "evidence-synthesis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
prism-llm = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py39"
